# tierkreis-riken

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: static.yml
documentation/source/: index.md
documentation/source/workers/: ibm_kobe.md  reimei.md  sqcsub.md
examples/: compile_ibm.py  compile_run_ibm.py  data.py  ntchem.py  run_ibm_reimei.py  snapshot_compile_run.py
scripts/: generate_stubs.py
smoke_tests/: result.txt  test_ibm_kobe.sh  test_reimei_simualtor.sh
workers/examples_worker/: stubs.py
workers/ntchem_worker/: cnt.sh  generate_stubs.py  main.sh  schema.tsp  spec.py  stubs.py
workers/tkr_ibm_kobe/: README.md  auth.py  main.py  main.sh  pyproject.toml  stubs.py  submit.py  tkr_sqcsub.c  tkr_sqcsub.cpp  tkr_sqcsub.py  token_impl.py  transpile_info.py
workers/tkr_ibm_kobe/data/: config.json  props.json  result.json
workers/tkr_ibm_kobe/scripts/: backend_setup.sh  build.sh  config.sh  fugaku.sh  pybind.sh  setupnanobind.sh  submit.sh  submit_local.sh  transpile_info.sh  transpile_info_local.sh
workers/tkr_ibm_kobe/src/: .tkr_sqcsub.c.swp  submit.c  tkr_sqcsub.c  transpile_info.c
workers/tkr_qulacs/: Dockerfile  pyproject.toml  qulacs.def  stubs.py
workers/tkr_reimei/: Readme.md  auth.py  main.py  pyproject.toml  pyqir.py  qnexus_impl.py  sqcsub_impl.py  stubs.py  token_impl.py
workers/tkr_reimei/test/: results.txt  test_reimei.py
workers/tkr_sqcsub/: main.sh
