[project]
name = "tierkreis-fugaku"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.7.19",
    "myst-nb>=1.3.0",
    "pytket>=2.10.1",
    "quantinuum-schemas>=7.0.0",
    "sphinx>=8.2.3",
    "sphinx-autodoc2>=0.5.0",
    "tierkreis",
]

[tool.uv]
package=true

[tool.uv.sources]
tierkreis = { git = "https://github.com/CQCL/tierkreis", subdirectory = "tierkreis" }

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
